--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,16 @@
         </dependency>
 
         <dependency>
+
+            <groupId>org.passay</groupId>
+
+            <artifactId>passay</artifactId>
+
+            <version>1.6.0</version>
+
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>2.7.1</version>
