--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=3200
 
 spring.data.mongodb.uri = mongodb+srv://falak:root123@falak-ola-mongo.fwex0.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=OLA_TRAINING
+
+#java.runtime.version=11
