--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,5 @@
 
 spring.data.mongodb.uri = mongodb+srv://falak:root123@falak-ola-mongo.fwex0.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=OLA_TRAINING
+
+cross.origin.url =
